AFTER 2.71 - Scaling to zero with manipulate center points works precisely on second time #40432

Closed
opened 2014-05-29 22:24:45 +02:00 by Piotr Komisarczyk · 14 comments

System Information
Operating system and graphics card
Windows 7 64bit, Nvidia GT 650M (Dell Inspiron 7720)

Blender Version
Broken: 2.71 Test Build, HASH: c56bbcc
Worked: probably never...

Short description of error
I have 3 objects on my scene. When manipulate objects centers is turned on (ALT-,) and pivot is set to 3DCursor (which is in center of grid) and I do S 0 ENTER (scaling by zero) the location of objects after scalling is a bit off. It should be for each object (0,0,0) and it is something like (0,3mm,0.25mm, -0.25mm). However when I repeat scaling for the second time the values for location are OK (0,0,0).

Exact steps for others to reproduce the error
Attachment shows steps: Layer 1, Layer2 initial scaling, Layer 3 second scaling
ScaleZeroManipulateCentersBug.blend

**System Information** Operating system and graphics card Windows 7 64bit, Nvidia GT 650M (Dell Inspiron 7720) **Blender Version** Broken: 2.71 Test Build, HASH: c56bbcc Worked: probably never... **Short description of error** I have 3 objects on my scene. When manipulate objects centers is turned on (ALT-,) and pivot is set to 3DCursor (which is in center of grid) and I do S 0 ENTER (scaling by zero) the location of objects after scalling is a bit off. It should be for each object (0,0,0) and it is something like (0,3mm,0.25mm, -0.25mm). However when I repeat scaling for the second time the values for location are OK (0,0,0). **Exact steps for others to reproduce the error** Attachment shows steps: Layer 1, Layer2 initial scaling, Layer 3 second scaling [ScaleZeroManipulateCentersBug.blend](https://archive.blender.org/developer/F91887/ScaleZeroManipulateCentersBug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @komi3d

Added subscriber: @komi3d

This also happens for other pivot types like active object. this type of scaling is really helpful when aligning objects.

This also happens for other pivot types like active object. this type of scaling is really helpful when aligning objects.
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

It seems that the scaling factor is exactly 0.0001 in this case - maybe a value limitation somewhere in the code.

It seems that the scaling factor is exactly 0.0001 in this case - maybe a value limitation somewhere in the code.
Bastien Montagne was assigned by Sergey Sharybin 2014-05-30 11:19:04 +02:00

Added subscribers: @mont29, @Sergey

Added subscribers: @mont29, @Sergey

That's probably just a precision issue..

@mont29, mind having a look into this report please? :)

That's probably just a precision issue.. @mont29, mind having a look into this report please? :)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

In fact, this is an internal limitation set to numinput for scaling, “no_zero”, which prevents getting 0.0 scale (code switches it to 0.0001 in this case, indeed).

Now, made a quick test without this limitation, and everything seems to work ok, so not quite sure why it is here… Would like to summon our transform code expert here, Campbell, what do you think?

In fact, this is an internal limitation set to numinput for scaling, “no_zero”, which prevents getting 0.0 scale (code switches it to 0.0001 in this case, indeed). Now, made a quick test without this limitation, and everything seems to work ok, so not quite sure why it is here… Would like to summon our transform code expert here, Campbell, what do you think?
Bastien Montagne changed title from Scaling to zero with manipulate center points works precisely on second time to AFTER 2.71 - Scaling to zero with manipulate center points works precisely on second time 2014-06-02 14:59:30 +02:00

In fact, this has been working this way since ages (2008 at least), I would say we can remove this limitation now (would also like to increase behavior when scale is NULL, currently we can’t grow it again from transform tool, which seems rather stupid).

Anyway, this is not something to touch just before a release, will have to wait a bit.

In fact, this has been working this way since ages (2008 at least), I would say we can remove this limitation now (would also like to increase behavior when scale is NULL, currently we can’t grow it again from transform tool, which seems rather stupid). Anyway, this is not something to touch just before a release, will have to wait a bit.

Ok. Thanks for taking a look at this. Hopefully it will be fixed in next releases :) It can really be a useful tool for quick and precise alignment along specified axises. Cheers.

Ok. Thanks for taking a look at this. Hopefully it will be fixed in next releases :) It can really be a useful tool for quick and precise alignment along specified axises. Cheers.

This issue was referenced by 1526620416

This issue was referenced by 15266204164fe94074a1a4867d9ff01d71d02e0d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 1526620416.

Closed by commit 1526620416.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40432
No description provided.